adicionei dev, container, hmtl e css

--- a/site-exemplo/style.css
+++ b/site-exemplo/style.css
@@ -2,6 +2,23 @@
 Folha de estilo de site one page html5 e css3
 augusto zano domingos
 */
+/*CSS Reset*/
+*{
+margin:0;
+border:0;
+padding:0;
+}
+  /* importacao de google fonts*/
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+  body{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+  }
+  /*layout*/
+  .Container{
+    margin: 0 auto;
+    background-color: #7f0;
+  }
 /*  smartphone vertical*/
 
 /*smartphone horizontal*/
@@ -9,23 +26,34 @@ augusto zano domingos
     body{
         background-color: #0ff;
     }
+    .Container{
+        max-width: 540px;
+    }
  }
 /*table vertical*/
 @media (min-width: 768px){
 body{
     background-color: #ff0;
 }
-
+.Container{
+    max-width: 720px;
+}
 }
 /*tablet horizontal*/
 @media (min-width: 992px){
     body{
      background-color: #ff6600;
     }
+    .Container{
+        max-width: 960px;
+    }
 }
 /*pc*/
 @media (min-width:1200px){
     body{
        background-color: #f00; 
+    }
+    .Container{
+        max-width: 1140px;
     }
 }
