--- a/site-exemplo/style.css
+++ b/site-exemplo/style.css
@@ -17,7 +17,13 @@ padding:0;
   /*layout*/
   .Container{
     margin: 0 auto;
-    background-color: #7f0;
+    background-color: #dcdcdc;
+  }
+  /* topo do site*/
+  #topo{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
   }
 /*  smartphone vertical*/
 
