--- a/site-exemplo/style.css
+++ b/site-exemplo/style.css
@@ -24,6 +24,16 @@ padding:0;
     justify-content: space-between;
     /*background-color: #a9a9a9;*/
   }
+  .Botao{
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.3em;
+    font-weight: 700;
+    background-color: #c00000;
+    padding: 10px 40px;
+    border: 2px solid #fff;
+    border-radius: 25px;
+  }
   /* topo do site*/
   #topo{
     position: fixed;
@@ -68,13 +78,34 @@ nav ul li a{
   text-decoration: none;
   color: #fff;
 }
+/*Destaque*/
+main{
+  height: 75vh;
+  background: url(imag/banner.jpg);
+  background-size: cover;
+  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+main h1{
+  font-size: 2.5em;
+}
+main h2{
+  font-size: 1em;
+  margin: 20px 0px 50px 0px;
 
+}
 
 /*smartphone horizontal*/
  @media (min-width:576px) {
     
     .Container{
         max-width: 540px;
+    }
+    /*Destaque*/
+    main h1, main h2{
+      text-shadow: #000 0.5em 0.5em 0.5em 0.5em;
     }
  }
 /*table vertical*/
@@ -83,12 +114,27 @@ nav ul li a{
 .Container{
     max-width: 720px;
 }
+/*Destaque*/
+main{
+  height: 45vh;
+}
+main h1{
+  font-size: 5.5em;
+
+}
+main h2{
+  font-size: 2em;
+}
 }
 /*tablet horizontal*/
 @media (min-width: 992px){
     
     .Container{
         max-width: 960px;
+    }
+    /*Destaque*/
+    main{
+      height: 70vh;
     }
 }
 /*pc*/
