--- a/site-exemplo/style.css
+++ b/site-exemplo/style.css
@@ -59,7 +59,12 @@ padding:0;
 }
 label{
   font-size: 3em;
-  padding-right: 15px;
+  position: fixed;
+  top: 5px;
+  right: 15px;
+  color: rgba(0,0,0,0.5);
+
+    
 }
 nav ul{
   list-style: none;
